// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch component > Extra Large switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-14 h-8"
        data-testid="switch"
      >
        <input
          class="sr-only"
          disabled=""
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-7 h-7 pointer-events-none"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-14 h-8"
      data-testid="switch"
    >
      <input
        class="sr-only"
        disabled=""
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-7 h-7 pointer-events-none"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Extra Large switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-14 h-8"
        data-testid="switch"
      >
        <input
          class="sr-only"
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-7 h-7 "
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-14 h-8"
      data-testid="switch"
    >
      <input
        class="sr-only"
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-7 h-7 "
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Large switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-12 h-7"
        data-testid="switch"
      >
        <input
          class="sr-only"
          disabled=""
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-6 h-6 pointer-events-none"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-12 h-7"
      data-testid="switch"
    >
      <input
        class="sr-only"
        disabled=""
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-6 h-6 pointer-events-none"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Large switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-12 h-7"
        data-testid="switch"
      >
        <input
          class="sr-only"
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-6 h-6 "
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-12 h-7"
      data-testid="switch"
    >
      <input
        class="sr-only"
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-6 h-6 "
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Medium switch disabled should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-8 h-5"
        data-testid="switch"
      >
        <input
          class="sr-only"
          disabled=""
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 pointer-events-none"
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-8 h-5"
      data-testid="switch"
    >
      <input
        class="sr-only"
        disabled=""
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-5 data-[state=checked]:bg-green/50"
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 pointer-events-none"
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Medium switch should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-8 h-5"
        data-testid="switch"
      >
        <input
          class="sr-only"
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 "
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-8 h-5"
      data-testid="switch"
    >
      <input
        class="sr-only"
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 "
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Switch component > Medium switch should render correctly by default size 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="relative inline-flex items-center cursor-pointer w-8 h-5"
        data-testid="switch"
      >
        <input
          class="sr-only"
          type="checkbox"
        />
        <div
          class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
        />
        <span
          class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 "
        />
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="relative inline-flex items-center cursor-pointer w-8 h-5"
      data-testid="switch"
    >
      <input
        class="sr-only"
        type="checkbox"
      />
      <div
        class="absolute inset-0 rounded-full transition-colors duration-200 bg-gray-10 "
      />
      <span
        class="block bg-white rounded-full transition-transform duration-200 transform translate-x-[3px] w-4 h-4 "
      />
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
